--- a/src/main/resources/db-oracle.properties
+++ b/src/main/resources/db-oracle.properties
@@ -1,6 +1,6 @@
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
-jdbc.username=ht
-jdbc.password=ht
+jdbc.username=root
+jdbc.password=root
 
 
